<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdminELearningTestFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_color">

        <ImageButton
            android:id="@+id/dismissBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="6dp"
            android:background="@color/tab_color"
            android:contentDescription="@string/close"
            android:padding="@dimen/dimen_10"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/circle2"
            android:gravity="center"
            android:backgroundTint="@color/tinted_color_4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/durationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/pt_serif_bold"
                android:padding="@dimen/dimen_16"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18" />
        </LinearLayout>

        <Button
            android:id="@+id/submitQuestionBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/ripple_effect12"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/questionViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/btnLayout"
        android:layout_below="@id/appBar"
        android:contentDescription="@string/view_pager" />

    <RelativeLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ripple_effect11"
            android:contentDescription="@string/prev"
            android:padding="@dimen/dimen_24"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/tab_color" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ripple_effect11"
            android:contentDescription="@string/next"
            android:padding="@dimen/dimen_24"
            android:src="@drawable/baseline_arrow_forward_24"
            app:tint="@color/tab_color" />

    </RelativeLayout>

</RelativeLayout>