<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:contentPadding="@dimen/dimen_10"
        android:backgroundTint="@color/gray"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/file_icon"
            app:tint="@color/white"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/logoutBtn"
        android:layout_toEndOf="@id/imageHolder"
        android:padding="@dimen/dimen_10"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/text_18" />

    <ImageButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/infoBtn"
        android:background="@drawable/ripple_effect11"
        android:contentDescription="@string/close"
        android:padding="@dimen/dimen_10"
        android:src="@drawable/ic_power"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/infoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ripple_effect11"
        android:contentDescription="@string/todo"
        android:padding="@dimen/dimen_10"
        android:src="@drawable/ic_info"
        app:tint="@color/black" />

</RelativeLayout>