<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:layout_marginEnd="@dimen/dimen_16"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dimen_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/dimen_16">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle_result_2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/file_icon"
                    android:src="@drawable/ic_user"
                    app:tint="@color/gray_600" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_toEndOf="@id/imageCard"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toochi_dennis"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <View
            android:id="@+id/dotView"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_toEndOf="@id/userNameTxt"
            android:background="@drawable/circle2"
            android:backgroundTint="@color/gray" />

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/dotView"
            android:text="@string/dashed_line"
            android:textSize="@dimen/text_12" />

        <TextView
            android:id="@+id/commentTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameTxt"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_toEndOf="@id/imageCard"
            android:ellipsize="marquee"
            android:fontFamily="@font/montserrat"
            android:text="@string/no_internet"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>