<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdminELearningDashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:layout_marginBottom="@dimen/dimen_64"
            android:contentDescription="@string/nested_scrollview"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:padding="@dimen/dimen_16"
                    android:text="@string/upcoming_event"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/tinted_8">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_16"
                        android:layout_alignParentBottom="true"
                        android:contentDescription="@string/tab_layout"
                        android:visibility="gone"
                        app:tabBackground="@drawable/indicator_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/no_internet"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_16"
                        android:fontFamily="@font/inter_regular"
                        android:paddingStart="@dimen/dimen_16"
                        android:paddingEnd="@dimen/dimen_16"
                        android:text="@string/recent_activity"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recentActivityRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/dimen_16"
                        android:paddingTop="@dimen/dimen_16"
                        android:paddingEnd="0dp"
                        android:paddingBottom="@dimen/dimen_16"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_admin_recent_activity" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/select_a_level"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/levelRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingEnd="0dp"
                    android:paddingBottom="@dimen/dimen_16" />

                <TextView
                    android:id="@+id/feedbackTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:padding="@dimen/dimen_16"
                    android:text="@string/no_data"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>